--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -3,10 +3,12 @@
 {{ if $data.contact.contact.enable }}
 {{ with $data.contact.contact }}
 {{"<!-- Start Contact Us -->" | safeHTML}}
+
 <section id="contact" class="contact-us section-bg">
 	<div class="container pb-5">
 		<div class="row">
 			<div class="col-lg-12">
+				<h1>asdfdsafdsfdsafsdafsdf</h1>
 				{{"<!-- section title -->" | safeHTML}}
 				<div class="title text-center wow fadeIn" data-wow-duration="500ms">
 					<h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
