--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,5 +1,5 @@
 <section class="sticky-top navigation">
-	<div class="container">
+	<div style= "background-color:pink !important;" class="container">
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand p-0" href="{{ .Site.BaseURL | relLangURL }}">
 				{{ if .Site.Params.logo }}
