--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,6 +1,6 @@
 <section class="sticky-top navigation">
 	<div style= "background-color:pink !important;" class="container">
-		<nav class="navbar navbar-expand-lg navbar-light">
+		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand p-0" href="{{ .Site.BaseURL | relLangURL }}">
 				{{ if .Site.Params.logo }}
 				<img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
